Converted the project to use classes

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/addons/p5.sound.min.js"></script>
+    <script src="./VectorField.js"></script>
+    <script src="./FlowLine.js"></script>
     <script src="./sketch.js"></script>
   </head>
 </html>
