--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
     <script src="./VectorField.js"></script>
     <script src="./FlowLine.js"></script>
     <script src="./sketch.js"></script>
+    <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
+  <body>
+  </body>
 </html>
